[gd_scene load_steps=32 format=3 uid="uid://cjjaaagbuky2e"]

[ext_resource type="Script" path="res://scenes/Entities/Player/Player.gd" id="1_jm2c2"]
[ext_resource type="Shader" path="res://shaders/Tutorial2.gdshader" id="2_7bvfq"]
[ext_resource type="Material" uid="uid://clyiv5dbfapk2" path="res://scenes/Entities/Player/PlayerChromAbbShader.tres" id="4_d520f"]
[ext_resource type="PackedScene" uid="uid://4ascxl37t4g1" path="res://scenes/Entities/Utils/EntityGravityArea.tscn" id="6_bki26"]
[ext_resource type="Texture2D" uid="uid://bc6nx8vj8tv2r" path="res://assets/Moth Flying/flying-moth_0001.png" id="6_xqfgo"]
[ext_resource type="PackedScene" uid="uid://yoivdmkuokl0" path="res://scenes/Entities/Utils/VelocityComponent.tscn" id="7_0mjfq"]
[ext_resource type="Texture2D" uid="uid://6kgmynju76tm" path="res://assets/Moth Flying/flying-moth_0004.png" id="7_h0at1"]
[ext_resource type="Texture2D" uid="uid://gfofvv7tpa5w" path="res://assets/Moth Flying/without-legs/Timeline 1_0001.png" id="8_cfyrq"]
[ext_resource type="Texture2D" uid="uid://drrcgu7apxg1j" path="res://assets/Moth Flying/flying-moth_0006.png" id="8_nx7p7"]
[ext_resource type="Script" path="res://scenes/Entities/Player/WingFlap.gd" id="9_5eh2y"]
[ext_resource type="Texture2D" uid="uid://caud5smw21i2q" path="res://assets/Moth Flying/without-legs/Timeline 1_0002.png" id="9_n3tn3"]
[ext_resource type="AudioStream" uid="uid://6eb7c0r4ygr4" path="res://assets/audio/sfx/wing_flap1.wav" id="10_0jq3m"]
[ext_resource type="Texture2D" uid="uid://m6u3vex6jp5s" path="res://assets/Moth Flying/without-legs/Timeline 1_0003.png" id="10_tnmfl"]
[ext_resource type="AudioStream" uid="uid://bqismph8dboi" path="res://assets/audio/sfx/wing_flap2.wav" id="11_cty4c"]
[ext_resource type="Script" path="res://scenes/Entities/Player/PlayerSprites.gd" id="11_w31v0"]
[ext_resource type="Texture2D" uid="uid://prgsy2vimnga" path="res://assets/Moth Flying/without-legs/individual-leg_0001.png" id="15_ybomp"]
[ext_resource type="Texture2D" uid="uid://bgxyo0hk0s8vo" path="res://assets/Moth Flying/without-legs/individual-leg_0003.png" id="17_fk10i"]
[ext_resource type="Texture2D" uid="uid://cc4meseuagvxr" path="res://assets/Moth Flying/without-legs/antenna_0001.png" id="18_0slyg"]
[ext_resource type="Texture2D" uid="uid://dh0fqjyfychh0" path="res://assets/fx/Repulse.png" id="19_v6178"]
[ext_resource type="Texture2D" uid="uid://n66bjga885m2" path="res://scenes/Entities/Player/CharacterLightTexture.tres" id="21_jrgmx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1knjk"]
shader = ExtResource("2_7bvfq")
shader_parameter/distortionTexture = ExtResource("19_v6178")

[sub_resource type="Gradient" id="Gradient_tdyss"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i3gpr"]
gradient = SubResource("Gradient_tdyss")

[sub_resource type="Animation" id="Animation_rsehp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_45lo8"]
resource_name = "repulse"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(25, 25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8q15b"]
_data = {
"RESET": SubResource("Animation_rsehp"),
"repulse": SubResource("Animation_45lo8")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e4444"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_b561y"]
interpolation_mode = 2
colors = PackedColorArray(0.60183, 0.60183, 0.60183, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o1elf"]
gradient = SubResource("Gradient_b561y")
width = 10
height = 10
fill = 1
fill_from = Vector2(0.5, 0.525641)
fill_to = Vector2(0.777778, 0.213675)

[sub_resource type="SpriteFrames" id="SpriteFrames_yn8d8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_xqfgo")
}, {
"duration": 1.0,
"texture": ExtResource("7_h0at1")
}, {
"duration": 1.0,
"texture": ExtResource("8_nx7p7")
}],
"loop": true,
"name": &"with_legs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_cfyrq")
}, {
"duration": 1.0,
"texture": ExtResource("9_n3tn3")
}, {
"duration": 1.0,
"texture": ExtResource("10_tnmfl")
}],
"loop": true,
"name": &"without_extremedies",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5lwxg"]
radius = 47.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
physics_interpolation_mode = 1
collision_layer = 24
collision_mask = 23
collision_priority = 2.0
floor_snap_length = 2.0
script = ExtResource("1_jm2c2")

[node name="RepulseDistortion" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_1knjk")
texture = SubResource("GradientTexture2D_i3gpr")

[node name="RepulseAnimation" type="AnimationPlayer" parent="RepulseDistortion"]
libraries = {
"": SubResource("AnimationLibrary_8q15b")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-26, 18, -19, 26, -8, 30, 3, 30, 15, 27, 24, 24, 32, 20, 35, 16, 37, 10, 37, 4, 36, 0, 32, -8, 30, -17, 27, -11, 21, -18, 19, -21, 17, -15, -6, -21, -26, -13, -29, 1)

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("Entity") instance=ExtResource("7_0mjfq")]
Entity = NodePath("..")
airResistance = 4

[node name="DamageEffectsTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_e4444")
lifetime = 3.0
speed_scale = 7.36
explosiveness = 0.06
randomness = 0.09
texture = SubResource("GradientTexture2D_o1elf")
emission_shape = 1
emission_sphere_radius = 33.59
direction = Vector2(-1, 0)
spread = 4.47
gravity = Vector2(0, 0)
initial_velocity_max = 37.27

[node name="FlippingSprite" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("legs", "antenna")]
z_index = 2
material = ExtResource("4_d520f")
use_parent_material = true
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_yn8d8")
animation = &"without_extremedies"
script = ExtResource("11_w31v0")
legs = [NodePath("Individual-leg0001"), NodePath("Individual-leg0002"), NodePath("Individual-leg0003")]
antenna = NodePath("Antenna0001")
metadata/_edit_lock_ = true

[node name="WingFlapSounds" type="Node2D" parent="FlippingSprite" node_paths=PackedStringArray("sounds")]
script = ExtResource("9_5eh2y")
sounds = [NodePath("WingFlap1"), NodePath("WingFlap2")]
spriteFrameToPlaySound = 2

[node name="WingFlap1" type="AudioStreamPlayer2D" parent="FlippingSprite/WingFlapSounds"]
scale = Vector2(2.5, 2.5)
stream = ExtResource("10_0jq3m")
volume_db = -5.0
bus = &"WingFlap"

[node name="WingFlap2" type="AudioStreamPlayer2D" parent="FlippingSprite/WingFlapSounds"]
stream = ExtResource("11_cty4c")
volume_db = -5.0
bus = &"WingFlap"

[node name="Individual-leg0001" type="Sprite2D" parent="FlippingSprite"]
self_modulate = Color(0.231373, 0.262745, 0.305882, 1)
z_index = -1
position = Vector2(15, 67.5)
scale = Vector2(0.875, 1.25)
texture = ExtResource("15_ybomp")
offset = Vector2(-20, -69)

[node name="Individual-leg0002" type="Sprite2D" parent="FlippingSprite"]
self_modulate = Color(0.230714, 0.262278, 0.30647, 1)
z_index = -1
position = Vector2(-12.5, 70)
scale = Vector2(0.871, 1.25)
texture = ExtResource("15_ybomp")
offset = Vector2(20, -70)
flip_h = true

[node name="Individual-leg0003" type="Sprite2D" parent="FlippingSprite"]
self_modulate = Color(0.231373, 0.262745, 0.305882, 1)
z_index = -1
position = Vector2(40, 57.5)
scale = Vector2(0.875, 1.25)
texture = ExtResource("17_fk10i")
offset = Vector2(-44, -63)

[node name="Antenna0001" type="Sprite2D" parent="FlippingSprite"]
z_index = -1
position = Vector2(87.5, 0)
texture = ExtResource("18_0slyg")
offset = Vector2(-88, -7)

[node name="GravityArea" parent="." node_paths=PackedStringArray("entity", "absorbingLight") groups=["Player"] instance=ExtResource("6_bki26")]
collision_layer = 2
entity = NodePath("..")
absorbingLight = NodePath("../PlayerLight")
metadata/_edit_lock_ = true

[node name="GravityShape2D" type="CollisionShape2D" parent="GravityArea"]
position = Vector2(6, 3)
rotation = 1.5708
shape = SubResource("CircleShape2D_5lwxg")
debug_color = Color(0.7, 0.671169, 0, 0.42)
metadata/_edit_lock_ = true

[node name="PlayerLight" type="PointLight2D" parent="."]
scale = Vector2(0.2, 0.2)
color = Color(0.5, 0.5, 0.5, 1)
blend_mode = 2
range_layer_min = -10
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = ExtResource("21_jrgmx")

[connection signal="timeout" from="DamageEffectsTimer" to="." method="_on_damage_effects_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
